--- a/Source/Icebreaker/Properties/Resources.resx
+++ b/Source/Icebreaker/Properties/Resources.resx
@@ -182,7 +182,7 @@
     <comment>Content of the Meetup for the propose meeting</comment>
   </data>
   <data name="MeetupTitle" xml:space="preserve">
-    <value>{0} / {1} Meet up</value>
+    <value>{0} / {1} Genesis Icebreaker Meetup</value>
     <comment>The title for the Meetup - {0} is the name of the first person that user has been matched with and {1} is the name of the user</comment>
   </data>
   <data name="NextButtonText" xml:space="preserve">
